--- a/views/list.pug
+++ b/views/list.pug
@@ -6,26 +6,29 @@ if snacks.length > 0
           .card-body
             .row
               .col-4
-                - const base64Image = snack.image || "C:/Users/user/Desktop/rapa과자/마가렛트_모카.png"
+                - const base64Image = snack.image
                 img.card-img(src=base64Image, alt=snack.name)
 
-              .col-8
+              .col-6
                 .snack-title
                   h5= snack.name
 
                 .nutrition-info
-                  if snack["Nutritional Ingredients"]
-                    - const ingredients = snack["Nutritional Ingredients"];
+                  if snack["nutritionalIngredients"] 
+                    - const ingredients = snack["nutritionalIngredients"];
                     if ingredients["칼로리"]
                       p.cal 칼로리: #{ingredients["칼로리"]}
                     if ingredients["탄"] || ingredients["단"] || ingredients["지"]
                       p.nutri 영양 성분:
                       |  탄수화물: #{ingredients["탄"] || '정보 없음'}, 단백질: #{ingredients["단"] || '정보 없음'}, 지방: #{ingredients["지"] || '정보 없음'}
-                    .col-2.d-flex.justify-content-center.align-items-center
-                      button.favorite-icon(onclick=`likeSnack('${snack.name}')`) ♥
-                      p.favorite-count #{snack.required || 0}
                   else
                     p.alert.alert-info 영양 성분 정보가 없습니다.
+
+              // 좋아요 아이콘 및 카운트를 오른쪽으로 배치
+              .col-2.d-flex.justify-content-center.align-items-center
+                .favorite-icon-container
+                  button.favorite-icon(onclick=`likeSnack('${snack.name}')`) ♥
+                  p.favorite-count #{snack.required || 0}
 else
   p.alert.alert-info(role='alert')
     | 현재 데이터가 없습니다.
