--- a/views/list.pug
+++ b/views/list.pug
@@ -43,7 +43,7 @@ html
     script.
       async function likeSnack(snackName) {
         try {
-          const response = await fetch("/like-snack", {
+          const response = await fetch("/likesnack", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
