--- a/views/new.pug
+++ b/views/new.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Snack Submission
-    link(rel="stylesheet" href="/public/css/style.css")
+    link(rel="stylesheet" href="/css/style.css")
   body
     form.form-inline(action="/post" method="POST" enctype="multipart/form-data" id="snackForm")
       .row
