--- a/views/home.pug
+++ b/views/home.pug
@@ -26,6 +26,7 @@ html(lang="ko")
     .header
       h1.logo Rapa
       h2.title Today's Snack
+      h3.version.ver2 ver 2
 
     // 본문 내용
     main.container.posts.mt-0
